[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/cow/8.png" type="Texture" id=1]
[ext_resource path="res://assets/cow/9.png" type="Texture" id=2]
[ext_resource path="res://assets/cow/4.png" type="Texture" id=3]
[ext_resource path="res://assets/cow/3.png" type="Texture" id=4]
[ext_resource path="res://assets/cow/1.png" type="Texture" id=5]
[ext_resource path="res://assets/cow/2.png" type="Texture" id=6]
[ext_resource path="res://assets/cow/5.png" type="Texture" id=7]
[ext_resource path="res://assets/cow/6.png" type="Texture" id=8]
[ext_resource path="res://assets/cow/7.png" type="Texture" id=9]
[ext_resource path="res://Cow.gd" type="Script" id=10]
[ext_resource path="res://assets/objects/grass.png" type="Texture" id=11]
[ext_resource path="res://assets/cow/eating.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "eat",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 32.9999
height = 24.0003

[sub_resource type="CapsuleShape2D" id=3]
radius = 28.9999
height = 154.0

[node name="Cow" type="StaticBody2D" groups=["enemy"]]
collision_layer = 2
script = ExtResource( 10 )
distance = 600
speed = 300.0
moving = true

[node name="CowAnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
animation = "idle"

[node name="BodyCollision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2, -4 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

[node name="hint" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -47 )
scale = Vector2( 0.28125, 0.3125 )
texture = ExtResource( 11 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
